--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".FeedActivity">
+    tools:context=".ui.FeedActivity">
 
     <!--<com.nononsenseapps.feeder.views.DrawShadowFrameLayout-->
         <!--android:id="@+id/main_content"-->
