--- a/app/src/main/res/layout/view_story.xml
+++ b/app/src/main/res/layout/view_story.xml
@@ -23,7 +23,8 @@
             android:id="@+id/story_image"
             android:layout_width="@dimen/item_img_def_width"
             android:layout_height="match_parent"
-            android:visibility="visible"/>
+            android:visibility="visible"
+            android:contentDescription="@string/story_thumbnail" />
     </FrameLayout>
 
     <LinearLayout
@@ -48,11 +49,11 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
                 android:layout_marginStart="2dp"
-                android:singleLine="true"
                 android:visibility="visible"
                 android:layout_alignParentEnd="true"
                 android:text="2014-04-12 17:12"
-                style="@style/TextAppearance.ListItem.Author"/>
+                style="@style/TextAppearance.ListItem.Author"
+                android:maxLines="1" />
             <TextView
                 android:id="@+id/story_author"
                 android:layout_width="wrap_content"
@@ -60,13 +61,13 @@
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="2dp"
-                android:singleLine="true"
                 android:visibility="visible"
                 android:ellipsize="middle"
                 android:layout_alignParentStart="true"
                 android:layout_toStartOf="@id/story_date"
                 android:text="SuperDuperFeedWithVeryLongAddressIOnded.com"
-                style="@style/TextAppearance.ListItem.Author"/>
+                style="@style/TextAppearance.ListItem.Author"
+                android:maxLines="1" />
             </RelativeLayout>
 
         <TextView
