--- a/app/src/main/res/layout-sw600dp/view_story.xml
+++ b/app/src/main/res/layout-sw600dp/view_story.xml
@@ -10,8 +10,7 @@
         android:id="@+id/story_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
-        android:contentDescription="@string/story_thumbnail" />
+        android:visibility="visible" />
 
     <!-- Background set in code, present here to preview layout -->
     <LinearLayout
@@ -39,9 +38,9 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginStart="2dp"
                 android:layout_marginTop="4dp"
+                android:singleLine="true"
                 android:text="2014-04-12 17:12"
-                android:visibility="visible"
-                android:maxLines="1" />
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/story_author"
@@ -54,9 +53,9 @@
                 android:layout_marginTop="4dp"
                 android:layout_toStartOf="@id/story_date"
                 android:ellipsize="middle"
+                android:singleLine="true"
                 android:text="SuperDuperFeedWithVeryLongAddressIOnded.com"
-                android:visibility="visible"
-                android:maxLines="1" />
+                android:visibility="visible" />
         </RelativeLayout>
 
         <TextView
