--- a/app/src/main/res/layout/activity_edit_feed.xml
+++ b/app/src/main/res/layout/activity_edit_feed.xml
@@ -37,7 +37,7 @@
                 android:hint="@string/url"
                 android:imeOptions="actionNext"
                 android:inputType="textUri"
-                android:maxLines="1" />
+                android:singleLine="true" />
         </com.nononsenseapps.feeder.views.FloatLabelLayout>
 
         <com.nononsenseapps.feeder.views.FloatLabelLayout
@@ -56,7 +56,7 @@
                 android:hint="@string/title"
                 android:imeOptions="actionNext"
                 android:inputType="text|textAutoComplete|textAutoCorrect|textCapSentences"
-                android:maxLines="1" />
+                android:singleLine="true" />
         </com.nononsenseapps.feeder.views.FloatLabelLayout>
 
         <com.nononsenseapps.feeder.views.FloatLabelLayout
@@ -77,7 +77,7 @@
                 android:hint="@string/tag"
                 android:imeOptions="actionDone"
                 android:inputType="text|textAutoComplete|textAutoCorrect|textCapSentences"
-                android:maxLines="1" />
+                android:singleLine="true" />
         </com.nononsenseapps.feeder.views.FloatLabelLayout>
 
         <!--<View-->
@@ -116,7 +116,7 @@
             android:hint="@string/add_feed_search_hint"
             android:imeOptions="actionGo"
             android:inputType="text|textAutoComplete|textUri"
-            android:maxLines="1" />
+            android:singleLine="true" />
 
         <ListView
             android:id="@+id/results_listview"
