--- a/app/src/main/res/layout/view_feed_tag.xml
+++ b/app/src/main/res/layout/view_feed_tag.xml
@@ -34,10 +34,10 @@
         android:gravity="center_vertical"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:paddingStart="2dp"
+        android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="@color/secondary_text_material_dark"
-        android:textSize="@dimen/navdrawer_unreadcount_textsize"
-        android:maxLines="1" />
+        android:textSize="@dimen/navdrawer_unreadcount_textsize" />
 
     <ImageView
         android:id="@+id/tag_expander"
@@ -45,8 +45,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:background="?android:selectableItemBackgroundBorderless"
-        android:src="@drawable/tinted_expand_more"
-        tools:ignore="ContentDescription" />
+        android:src="@drawable/tinted_expand_more" />
 
     <TextView
         android:id="@+id/tag_name"
@@ -56,6 +55,6 @@
         android:layout_toStartOf="@id/feed_unreadcount"
         android:gravity="center_vertical"
         android:paddingEnd="2dp"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:maxLines="1" />
+        android:singleLine="true"
+        android:textAppearance="?android:attr/textAppearanceListItemSmall" />
 </RelativeLayout>
