--- a/app/src/main/res/layout/include_activity_feed_main.xml
+++ b/app/src/main/res/layout/include_activity_feed_main.xml
@@ -66,7 +66,7 @@
                 android:gravity="center_vertical|start"
                 android:paddingStart="16dp"
                 android:singleLine="true"
-                android:text="Night mode"
+                android:text="@string/night_mode"
                 android:textColor="@android:color/primary_text_dark" />
 
             <CheckedTextView
@@ -80,7 +80,7 @@
                 android:clickable="true"
                 android:gravity="center_vertical|end"
                 android:singleLine="true"
-                android:text="Notify for new items"
+                android:text="@string/notify_for_new_items"
                 android:textColor="@android:color/primary_text_dark" />
         </FrameLayout>
     </android.support.design.widget.AppBarLayout>
