--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -116,6 +116,17 @@
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textColor">@color/primary_text_default_material_dark</item>
     </style>
+    <style name="TextAppearance.Title.Read">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">@color/white_54</item>
+    </style>
+
+    <style name="TextAppearance.Body">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/white_38</item>
+    </style>
 
     <style name="TextAppearance.Subhead"
            parent="TextAppearance.Title">
@@ -125,12 +136,6 @@
         <item name="android:textColor">@color/white_54</item>
         <item name="android:textSize">32sp</item>
         <item name="android:fontFamily">sans-serif-light</item>
-    </style>
-
-    <style name="TextAppearance.Body">
-    <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textColor">@color/tertiary_text_material_dark</item>
     </style>
 
     <style name="TextAppearance.ListItem"/>
