--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,16 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="ThemeLPreview">
-        <attr name="actionBarIconColor" format="color"/>
-    </declare-styleable>
-    <declare-styleable name="BaseTheme">
-        <attr name="actionBarOverlayTopOffset" format="dimension" />
-        <attr name="actionBarInsetStart" format="dimension" />
-        <attr name="spinnerBarInsetStart" format="dimension" />
-        <attr name="popupItemBackground" format="dimension" />
-        <attr name="photoItemForeground" format="dimension" />
-    </declare-styleable>
-    <declare-styleable name="ThemeIOSched">
+    <declare-styleable name="AppTheme">
         <attr name="isFloatingWindow" format="boolean" />
         <attr name="itemSwipingBGColor" format="color" />
         <attr name="nightBGColor" format="color" />
