--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <color name="primary">@color/material_green_700</color>
     <color name="primary_dark">@color/material_green_900</color>
@@ -13,7 +13,7 @@
 
     <color name="translucent_actionbar_background">@color/primary</color>
     <color name="navdrawer_background">@color/dark_grey_850</color>
-    <color name="navdrawer_text_color">@color/primary_text_default_material_dark</color>
+    <color name="navdrawer_text_color">@color/white_87</color>
     <color name="navdrawer_text_color_selected">@color/primary</color>
     <color name="navdrawer_icon_tint">#808080</color>
     <color name="navdrawer_icon_tint_selected">@color/primary</color>
@@ -26,7 +26,7 @@
     <color name="refresh_progress_2">#ff00e676</color>
     <color name="refresh_progress_3">#ff2979ff</color>
 
-    <color name="ripple_material_dark">@color/accent</color>
+    <color name="ripple_material_dark" tools:override="true">@color/accent</color>
 
     <!-- Dark theme colors -->
     <color name="dark_grey_800">#424242</color>
@@ -42,22 +42,11 @@
     <color name="white_87">#deffffff</color>
 
     <!-- Material Colors -->
-    <color name="background_material_dark">#ff212121</color>
-    <color name="button_material_dark">#ff5a595b</color>
-    <color name="bright_foreground_material_dark">@android:color/white</color>
-    <color name="bright_foreground_material_light">@android:color/black</color>
     <!-- White 50% -->
-    <color name="bright_foreground_disabled_material_dark">#80ffffff</color>
+    <color name="white_50">#80ffffff</color>
     <!-- Black 50% -->
-    <color name="bright_foreground_disabled_material_light">#80000000</color>
-    <color name="bright_foreground_inverse_material_dark">@color/bright_foreground_material_light</color>
-    <color name="dim_foreground_material_dark">#ffbebebe</color>
-    <color name="dim_foreground_disabled_material_dark">#80bebebe</color>
-    <!-- TODO: This is 40% alpha on the default accent color. -->
-    <color name="highlighted_text_material_dark">#6640c4ff</color>
+    <color name="black_50">#80000000</color>
 
-    <!-- White 87% -->
-    <color name="primary_text_default_material_dark">@color/white_87</color>
     <!-- White 38% -->
     <color name="secondary_text_material_dark">@color/white_38</color>
     <!-- White 38% (TODO: same as secondary?) -->
