--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -5,16 +5,16 @@
       android:title="@string/synchronization">
 
     <ListPreference
-        android:defaultValue="1"
-        android:title="Check for updates" android:entries="@array/pref_sync_frequency_titles"
-        android:entryValues="@array/pref_sync_frequency_values" android:key="pref_sync_freq"/>
+            android:defaultValue="1"
+            android:title="@string/check_for_updates" android:entries="@array/pref_sync_frequency_titles"
+            android:entryValues="@array/pref_sync_frequency_values" android:key="pref_sync_freq"/>
     <SwitchPreference
         android:defaultValue="false"
         android:key="pref_sync_only_wifi" android:title="@string/only_on_wifi"/>
     <SwitchPreference
-        android:defaultValue="false"
-        android:title="Include mobile hotspots" android:key="pref_sync_hotspots"
-        android:summary="@string/may_result_data_charges"/>
+            android:defaultValue="false"
+            android:title="@string/include_mobile_hotspots" android:key="pref_sync_hotspots"
+            android:summary="@string/may_result_data_charges"/>
     <SwitchPreference
         android:defaultValue="false"
         android:title="@string/only_when_charging" android:key="pref_sync_only_charging"/>
@@ -27,7 +27,7 @@
         android:title="@string/only_on_wifi" android:key="pref_img_only_wifi"/>
     <SwitchPreference
         android:defaultValue="false"
-        android:title="Include mobile hotspots" android:key="pref_img_hotspots"
+        android:title="@string/include_mobile_hotspots" android:key="pref_img_hotspots"
         android:summary="@string/may_result_data_charges"/>
   </PreferenceCategory>
 </PreferenceScreen>
