Remove unused strings

--- a/app/src/main/res/layout/fragment_reader_tablet.xml
+++ b/app/src/main/res/layout/fragment_reader_tablet.xml
@@ -54,8 +54,7 @@
             android:minHeight="300dp"
             android:layout_marginTop="8dp"
             style="@style/TextAppearance.Reader.Body"
-            android:textIsSelectable="true"
-            android:text="@string/hello_world"/>
+            android:textIsSelectable="true"/>
     </LinearLayout>
 
 
