--- a/app/src/main/res/layout/empty_feeds_at_all.xml
+++ b/app/src/main/res/layout/empty_feeds_at_all.xml
@@ -1,29 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@android:id/empty"
-              android:orientation="vertical"
-              android:layout_gravity="center"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-
-<TextView
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@android:id/empty"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    style="@style/TextAppearance.EmptyView"
-    android:text="@string/empty_no_feeds_top"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:gravity="center"/>
+    android:layout_gravity="center"
+    android:orientation="vertical">
 
-<TextView
-    android:id="@+id/empty_add_feed"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    style="@style/TextAppearance.EmptyView"
-    android:text="@string/empty_no_feeds_add"
-    android:background="?android:selectableItemBackground"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:gravity="center"/>
-</LinearLayout>
+    <TextView
+        android:id="@+id/textView"
+        style="@style/TextAppearance.EmptyView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:gravity="center"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:text="@string/empty_no_feeds_top"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
+
+    <TextView
+        android:id="@+id/empty_add_feed"
+        style="@style/TextAppearance.EmptyView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="?android:selectableItemBackground"
+        android:gravity="center"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:text="@string/empty_no_feeds_add"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
+</android.support.constraint.ConstraintLayout>
