Improve empty view layout

--- a/app/src/main/res/layout/empty_feed.xml
+++ b/app/src/main/res/layout/empty_feed.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/empty"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
@@ -20,9 +19,13 @@
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
         android:text="@string/empty_feed_top"
+        app:layout_constraintBottom_toTopOf="@+id/empty_open_feeds"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_goneMarginTop="8dp"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1" />
 
@@ -38,6 +41,7 @@
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
         android:text="@string/empty_feed_open"
+        app:layout_constraintBottom_toTopOf="@+id/empty_add_feed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/empty_nothing_here"
