--- a/app/src/main/res/layout/empty_feeds_at_all.xml
+++ b/app/src/main/res/layout/empty_feeds_at_all.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/empty"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
@@ -20,9 +19,12 @@
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
         android:text="@string/empty_no_feeds_top"
+        app:layout_constraintBottom_toTopOf="@+id/empty_add_feed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.4"
+        app:layout_constraintVertical_chainStyle="packed"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
@@ -39,9 +41,10 @@
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
         android:text="@string/empty_no_feeds_add"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@id/textView"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
