--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -98,7 +98,7 @@
 
     <style name="TextAppearance.EmptyView">
         <item name="android:textColor">@color/white_54</item>
-        <item name="android:textSize">32sp</item>
+        <item name="android:textSize">@dimen/emptyFeedsTextSize</item>
         <item name="android:fontFamily">sans-serif-light</item>
     </style>
 
