Fix notify icon on small screens
Reproduced issue and verified fix on emulator. The change from
`singleLine` to `maxLines` is what fixed the issue. I took the
opportunity to squash other lint warnings in the same layout.

Fixes #55

--- a/app/src/main/res/layout/include_activity_feed_main.xml
+++ b/app/src/main/res/layout/include_activity_feed_main.xml
@@ -68,15 +68,13 @@
                 android:layout_height="32dp"
                 android:layout_gravity="start"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:background="?selectableItemBackground"
                 android:checkMark="@drawable/nightmode_checkmark"
                 android:clickable="true"
                 android:gravity="center_vertical|start"
-                android:paddingStart="16dp"
-                android:singleLine="true"
+                android:maxLines="1"
                 android:text="@string/night_mode"
                 android:textColor="@android:color/primary_text_dark"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -93,15 +91,13 @@
                 android:layout_gravity="end"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="0dp"
                 android:background="?selectableItemBackground"
                 android:checkMark="@drawable/notification_checkmark"
                 android:clickable="true"
                 android:gravity="center_vertical|end"
-                android:singleLine="true"
+                android:maxLines="1"
                 android:text="@string/notify_for_new_items"
                 android:textColor="@android:color/primary_text_dark"
                 app:layout_constraintBaseline_toBaselineOf="@+id/nightcheck"
