Align text in editfeed layout

--- a/app/src/main/res/layout/activity_edit_feed.xml
+++ b/app/src/main/res/layout/activity_edit_feed.xml
@@ -106,16 +106,13 @@
   <android.support.constraint.ConstraintLayout
     android:id="@+id/feed_search_frame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <EditText
       android:id="@+id/search_view"
       style="@style/TextAppearance.Title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="8dp"
-      android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       android:hint="@string/add_feed_search_hint"
       android:imeOptions="actionGo"
@@ -130,8 +127,6 @@
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginBottom="8dp"
-      android:layout_marginEnd="8dp"
-      android:layout_marginStart="8dp"
       android:layout_marginTop="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
